--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Cosmos Impresiones | Stickers & Imprenta</title>
   <meta name="description" content="Stickers, vinilos resistentes al agua, holográficos y esferas navideñas personalizadas. Pedí por WhatsApp." />
   <meta name="theme-color" content="#0b0b1a" />
+  <link rel="icon" href="assets/favicon.ico">
   <link rel="preload" as="image" href="assets/hero.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
